--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
+    "@vue/cli-plugin-typescript": "^4.5.13",
     "@vue/compiler-sfc": "^3.0.5",
     "vite": "^2.3.7"
   }
